# go/docs/swagger.json
@@ -2415,11 +2415,19 @@
         "models.ExportSelectedItem": {
             "type": "object",
             "properties": {
+                "area_id": {
+                    "description": "For commodities: which area they belong to",
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
                 "include_all": {
                     "type": "boolean"
+                },
+                "location_id": {
+                    "description": "Relationship fields for preserving hierarchy snapshot",
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
